--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,12 @@ apply plugin: 'java'
 
 jar {
     manifest {
-        attributes 'Main-Class': 'src.main.ttt.Main'
+        attributes 'Main-Class': 'src.main.cli_ttt.Main'
     }
 }
 
 task(run, dependsOn: 'classes', type: JavaExec) {
-    main = "ttt.Main"
+    main = "cli_ttt.Main"
     classpath = sourceSets.main.runtimeClasspath
 }
 
@@ -42,7 +42,6 @@ jacocoTestReport {
             fileTree(dir: it,
                     exclude: ['**/Main.*',
                               '**/ConsoleDisplay.*',
-                              '**/Minimax.*',
                               '**/ConsoleInput.*'
                     ])
         })
